--- a/src/ScannerApp/CMakeLists.txt
+++ b/src/ScannerApp/CMakeLists.txt
@@ -10,7 +10,6 @@ target_include_directories(ScannerApp PRIVATE
 
 target_link_libraries(ScannerApp ScannerLib)
 
-# Статическая линковка стандартных библиотек для MinGW
 if(WIN32 AND NOT MSVC)
     target_link_libraries(ScannerApp -static-libstdc++ -static-libgcc)
 endif()
@@ -21,13 +20,10 @@ if(WIN32)
             COMMAND ${CMAKE_COMMAND} -E copy_if_different
             $<TARGET_FILE:ScannerLib>
             $<TARGET_FILE_DIR:ScannerApp>
-            COMMENT "Copying ScannerLib DLL to EXE directory"
     )
 
-    # Копируем OpenSSL DLL
     if(OPENSSL_FOUND)
         if(MSVC)
-            # Для MSVC копируем из стандартного расположения
             add_custom_command(TARGET ScannerApp POST_BUILD
                     COMMAND ${CMAKE_COMMAND} -E copy_if_different
                     "${OPENSSL_ROOT_DIR}/bin/libssl-3-x64.dll"
@@ -35,10 +31,8 @@ if(WIN32)
                     COMMAND ${CMAKE_COMMAND} -E copy_if_different
                     "${OPENSSL_ROOT_DIR}/bin/libcrypto-3-x64.dll"
                     $<TARGET_FILE_DIR:ScannerApp>
-                    COMMENT "Copying OpenSSL DLLs to EXE directory"
             )
         else()
-            # Для MinGW копируем из MSYS2
             add_custom_command(TARGET ScannerApp POST_BUILD
                     COMMAND ${CMAKE_COMMAND} -E copy_if_different
                     "C:/msys64/mingw64/bin/libssl-3-x64.dll"
@@ -46,24 +40,21 @@ if(WIN32)
                     COMMAND ${CMAKE_COMMAND} -E copy_if_different
                     "C:/msys64/mingw64/bin/libcrypto-3-x64.dll"
                     $<TARGET_FILE_DIR:ScannerApp>
-                    COMMENT "Copying OpenSSL DLLs to EXE directory"
             )
         endif()
     endif()
 
-    # Копируем MinGW runtime DLL если используем MinGW
     if(NOT MSVC)
         add_custom_command(TARGET ScannerApp POST_BUILD
                 COMMAND ${CMAKE_COMMAND} -E copy_if_different
-                "C:/Program Files/JetBrains/CLion 2023.*/bin/mingw/bin/libgcc_s_seh-1.dll"
+                "C:/msys64/mingw64/bin/libgcc_s_seh-1.dll"
                 $<TARGET_FILE_DIR:ScannerApp>
                 COMMAND ${CMAKE_COMMAND} -E copy_if_different
-                "C:/Program Files/JetBrains/CLion 2023.*/bin/mingw/bin/libstdc++-6.dll"
+                "C:/msys64/mingw64/bin/libstdc++-6.dll"
                 $<TARGET_FILE_DIR:ScannerApp>
                 COMMAND ${CMAKE_COMMAND} -E copy_if_different
-                "C:/Program Files/JetBrains/CLion 2023.*/bin/mingw/bin/libwinpthread-1.dll"
+                "C:/msys64/mingw64/bin/libwinpthread-1.dll"
                 $<TARGET_FILE_DIR:ScannerApp>
-                COMMENT "Copying MinGW runtime DLLs to EXE directory"
         )
     endif()
 
